More 1.19.2 (datagen) work - it boots up i guess